@@ -54,11 +54,7 @@ Depends: ${shlibs:Depends},
          gsettings-desktop-schemas (>= 3.3.0),
          nautilus-data (>= 2.91.3-1)
 Recommends: pulseaudio
-Breaks: rhythmbox (<< 0.11.5),
-        banshee (<< 0.13.2+dfsg-7),
-        totem (<< 2.22.0),
-        gnome-control-center (<< 1:2.21.5),
-        gnome-session (<< 2.24),
+Breaks: gnome-session (<< 2.24),
         gnome-screensaver (<< 2.28.0),
         gnome-color-manager (<< 3.0),
         gdm3 (<< 3.0)
